# taskspec

./: .coveragerc  .env.example  .gitignore  .mutmut.cfg  CLAUDE.md  LICENSE.md  README.md  analyzer.py  config.py  conftest.py  design.py  llm.py  main.py  manual_mutation_test.py  mutation_example.py  mutation_examples.md  pyproject.toml  run_mutation_main_utils.py  run_mutation_simple.py  run_mutation_tests.py  run_tests.py  search.py  setup.cfg  setup.py  template.py  utils.py
cache/: __init__.py  base.py  disk_cache.py  memory_cache.py
docs/: mutation_testing_guide.md
examples/: custom_template.md  sample_conventions.md  sample_design.md  sample_task.md
taskspec/: __init__.py  analyzer.py  config.py  design.py  llm.py  main.py  prompts.py  python_detector.py  search.py  template.py  utils.py
taskspec/cache/: __init__.py  base.py  disk_cache.py  memory_cache.py
tests/: conftest.py  fixtures.py  test_analyzer.py  test_cache.py  test_config.py  test_design.py  test_disk_cache.py  test_e2e.py  test_imports.py  test_llm.py  test_main.py  test_mutation_example.py  test_search.py  test_simple.py  test_template.py  test_utils.py
