[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "taskspec"
version = "0.1.0"
description = "Task analysis and specification generator using LLMs"
requires-python = ">=3.12"
dependencies = [
    "typer>=0.9.0",
    "rich>=13.6.0",
    "litellm>=1.16.0", 
    "python-dotenv>=1.0.0",
    "pydantic>=2.5.0",
    "requests>=2.31.0",
    "pyyaml>=6.0.0",
    "statistics>=1.0.3.5",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.1.0",
    "mutmut>=3.2.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]

[tool.coverage.run]
source = ["taskspec"]
omit = ["*/tests/*", "*/test_*.py", "*/mutants/*", "setup.py", "run_mutation*.py", "mutation_example.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
    "pass",
    "raise ImportError"
]

[tool.mutmut]
paths_to_mutate = "taskspec/cache/base.py"
backup = false
runner = "pytest -xvs --timeout=10"
tests_dir = "tests/"
exclude = """
tests/
venv/
__pycache__/
cache/__pycache__/
htmlcov/
setup.py
run_mutation_tests.py
"""